--- a/src/ui_ng/src/i18n/lang/en-us-lang.json
+++ b/src/ui_ng/src/i18n/lang/en-us-lang.json
@@ -258,10 +258,11 @@
         "STATUS": "Status",
         "OPERATION": "Operation",
         "CREATION_TIME": "Start Time",
-        "END_TIME": "End Time",
+        "UPDATE_TIME": "Update Time",
         "LOGS": "Logs",
         "OF": "of",
         "ITEMS": "items",
+        "NO_LOGS": "No log",
         "TOGGLE_ENABLE_TITLE": "Enable Rule",
         "CONFIRM_TOGGLE_ENABLE_POLICY": "After enabling the replication rule, all repositories under the project will be replicated to the destination registry. \nPlease confirm to continue.",
         "TOGGLE_DISABLE_TITLE": "Disable Rule",
@@ -413,6 +414,7 @@
         },
         "SCANNING": {
             "TRIGGER_SCAN_ALL_SUCCESS": "Trigger scan all successfully!",
+            "TRIGGER_SCAN_ALL_FAIL": "Failed to trigger scan all with error: {{error}",
             "TITLE": "Vulnerability Scanning",
             "SCAN_ALL": "Scan All",
             "SCAN_NOW": "SCAN NOW",
@@ -485,8 +487,8 @@
             "FOOT_OF": "of"
         },
         "CHART": {
-            "SCANNING_TIME": "Scan completed",
-            "TOOLTIPS_TITLE": "This tag has {{totalVulnerability}} package(s) with vulnerabilities across all {{totalPackages}} package(s)."
+            "SCANNING_TIME": "Scan completed datetime",
+            "TOOLTIPS_TITLE": "This image includes {{totalPackages}} {{package}} with {{vulnerability}} in {{totalVulnerability}} of the {{packageExt}}."
         },
         "SEVERITY": {
             "HIGH": "high",
@@ -496,11 +498,11 @@
             "UNKNOWN": "unknown",
             "NONE": "none"
         },
-        "SINGULAR": "Vulnerability",
-        "PLURAL": "Vulnerabilities",
+        "SINGULAR": "vulnerability",
+        "PLURAL": "vulnerabilities",
         "PLACEHOLDER": "Filter Vulnerabilities",
-        "PACKAGE": "Package with",
-        "PACKAGES": "Packages with",
+        "PACKAGE": "package",
+        "PACKAGES": "packages",
         "SCAN_NOW": "Scan",
         "JOB_LOG_VIEWER": "View Scanning Job Log"
     },
