--- a/src/ui_ng/src/i18n/lang/es-es-lang.json
+++ b/src/ui_ng/src/i18n/lang/es-es-lang.json
@@ -258,9 +258,10 @@
         "STATUS": "Estado",
         "OPERATION": "Operación",
         "CREATION_TIME": "Fecha de Inicio",
-        "END_TIME": "Fecha de Finalización",
+        "UPDATE_TIME": "Update time",
         "LOGS": "Logs",
         "OF": "of",
+        "NO_LOGS": "No log",
         "ITEMS": "elementos",
         "TOGGLE_ENABLE_TITLE": "Activar Regla",
         "CONFIRM_TOGGLE_ENABLE_POLICY": "Después de la activación de esta regla, todos los repositorios de este proyecto serán replicados al registro de destino.\nPor favor, confirme para continuar.",
@@ -414,6 +415,7 @@
         },
         "SCANNING": {
             "TRIGGER_SCAN_ALL_SUCCESS": "Trigger scan all successfully!",
+            "TRIGGER_SCAN_ALL_FAIL": "Failed to trigger scan all with error: {{error}",
             "TITLE": "Vulnerability Scanning",
             "SCAN_ALL": "Scan All",
             "SCAN_NOW": "SCAN NOW",
@@ -484,8 +486,8 @@
             "FOOT_OF": "of"
         },
         "CHART": {
-            "SCANNING_TIME": "Scan completed",
-            "TOOLTIPS_TITLE": "This tag has {{totalVulnerability}} package(s) with vulnerabilities across all {{totalPackages}} package(s)."
+            "SCANNING_TIME": "Scan completed datetime",
+            "TOOLTIPS_TITLE": "This image includes {{totalPackages}} {{package}} with {{vulnerability}} in {{totalVulnerability}} of the {{packageExt}}."
         },
         "SEVERITY": {
             "HIGH": "high",
@@ -495,11 +497,11 @@
             "UNKNOWN": "unknown",
             "NONE": "none"
         },
-        "SINGULAR": "Vulnerability",
-        "PLURAL": "Vulnerabilities",
+        "SINGULAR": "vulnerability",
+        "PLURAL": "vulnerabilities",
         "PLACEHOLDER": "Filter Vulnerabilities",
-        "PACKAGE": "Package with",
-        "PACKAGES": "Packages with",
+        "PACKAGE": "package",
+        "PACKAGES": "packages",
         "SCAN_NOW": "Scan",
         "JOB_LOG_VIEWER": "View Scanning Job Log"
     },
