--- a/src/ui_ng/src/i18n/lang/zh-cn-lang.json
+++ b/src/ui_ng/src/i18n/lang/zh-cn-lang.json
@@ -193,6 +193,7 @@
         "TAGS": "标签",
         "OPERATION": "操作",
         "OPERATIONS": "操作",
+        "CLIENT": "客户端",
         "TIMESTAMP": "时间戳",
         "ALL_OPERATIONS": "所有操作",
         "PULL": "Pull",
