--- a/src/ui_ng/src/i18n/lang/en-us-lang.json
+++ b/src/ui_ng/src/i18n/lang/en-us-lang.json
@@ -193,6 +193,7 @@
         "TAGS": "Tags",
         "OPERATION": "Operation",
         "OPERATIONS": "Operations",
+        "CLIENT": "Client",
         "TIMESTAMP": "Timestamp",
         "ALL_OPERATIONS": "All Operations",
         "PULL": "Pull",
