Modify filter`s position and Modify member module switch member`s apperence

--- a/src/ui_ng/src/i18n/lang/es-es-lang.json
+++ b/src/ui_ng/src/i18n/lang/es-es-lang.json
@@ -201,7 +201,9 @@
         "ADDED_SUCCESS": "Miembro añadido satisfactoriamente.",
         "DELETED_SUCCESS": "Miembro eliminado satisfactoriamente",
         "SWITCHED_SUCCESS": "Rol del miembro cambiado satisfactoriamente.",
-        "OF": "of"
+        "OF": "of",
+        "SWITCH_TITLE": "Confirm project members switch",
+        "SWITCH_SUMMARY": "Do you want to switch project members {{param}}?"
     },
     "AUDIT_LOG": {
         "USERNAME": "Nombre de usuario",
