--- a/src/ui_ng/src/i18n/lang/zh-cn-lang.json
+++ b/src/ui_ng/src/i18n/lang/zh-cn-lang.json
@@ -201,7 +201,9 @@
         "DELETION_SUMMARY": "你确认删除项目成员 {{param}}?",
         "ADDED_SUCCESS": "成功新增成员。",
         "DELETED_SUCCESS": "成功删除成员。",
-        "SWITCHED_SUCCESS": "切换角色成功。"
+        "SWITCHED_SUCCESS": "切换角色成功。",
+        "SWITCH_TITLE": "切换项目成员确认",
+        "SWITCH_SUMMARY": "你确认切换项目成员 {{param}}??"
     },
     "AUDIT_LOG": {
         "USERNAME": "用户名",
