--- a/src/portal/src/i18n/lang/en-us-lang.json
+++ b/src/portal/src/i18n/lang/en-us-lang.json
@@ -596,7 +596,8 @@
             "ROOT_CERT_DOWNLOAD": "Download the root certificate of registry.",
             "SCANNING_POLICY": "Set image scanning policy based on different requirements. 'None': No active policy; 'Daily At': Triggering scanning at the specified time everyday.",
             "VERIFY_CERT": "Verify Cert from LDAP Server",
-            "READONLY_TOOLTIP": "In read-only mode, you can not delete repositories or tags or push images. "
+            "READONLY_TOOLTIP": "In read-only mode, you can not delete repositories or tags or push images. ",
+            "REPO_TOOLTIP": "Users can not do any operations to the images in this mode."
         },
         "LDAP": {
             "URL": "LDAP URL",
