--- a/src/portal/src/i18n/lang/en-us-lang.json
+++ b/src/portal/src/i18n/lang/en-us-lang.json
@@ -818,6 +818,8 @@
     "DETAILS":"Details",
     "PENDING":"Pending",
     "FINISHED":"Finished",
+    "STOPPED":"Stopped",
+    "ERROR":"Error",
     "SCHEDULE": {
         "NONE": "None",
         "DAILY": "Daily",
@@ -836,8 +838,7 @@
         "LOG_DETAIL":"Log Details",
         "MSG_SUCCESS":"Garbage Collection Successful",
         "MSG_SCHEDULE_SET":"Garbage Collection schedule has been set",
-        "MSG_SCHEDULE_RESET":"Garbage Collection schedule has been reset",
-        "MSG_ERROR":"Can not do Garbase Collection too often,please try again later."
+        "MSG_SCHEDULE_RESET":"Garbage Collection schedule has been reset"
     }
     
 }
