--- a/src/portal/src/i18n/lang/fr-fr-lang.json
+++ b/src/portal/src/i18n/lang/fr-fr-lang.json
@@ -779,6 +779,7 @@
     "PENDING":"Pending",
     "FINISHED":"Finished",
     "STOPPED":"Stopped",
+    "RUNNING":"Running",
     "ERROR":"Error",
     "SCHEDULE": {
         "NONE": "None",
