--- a/src/portal/src/i18n/lang/fr-fr-lang.json
+++ b/src/portal/src/i18n/lang/fr-fr-lang.json
@@ -55,6 +55,7 @@
         "PORT_REQUIRED": "Le champ est obligatoire et doit être un numéro de port valide.",
         "EMAIL_EXISTING": "L'adresse e-mail existe déjà.",
         "USER_EXISTING": "Le nom d'utilisateur est déjà utilisé.",
+        "NONEMPTY": "Can't be empty",
         "REPO_TOOLTIP": "Users can not do any operations to the images in this mode."
     },
     "PLACEHOLDER": {
@@ -453,7 +454,7 @@
         "ACTION": "ACTION",
         "DEPLOY": "DEPLOY",
         "ADDITIONAL_INFO": "Add Additional Info",
-        "TARGET_PROJECT": "Projet Cible"
+        "REPO_NAME": "Repository"
     },
     "HELM_CHART": {
         "HELMCHARTS": "Charts",
