Add build history component to Harbor UI Add build histroy section and navbar to tag-detail component Add i18n items of build history Format code.
Signed-off-by: Frank Kung <kfanjian@gmail.com>

--- a/src/portal/src/i18n/lang/en-us-lang.json
+++ b/src/portal/src/i18n/lang/en-us-lang.json
@@ -379,15 +379,15 @@
         "IMMEDIATE": "Immediate",
         "DAILY": "Daily",
         "WEEKLY": "Weekly",
-        "SETTING":"Options",
-        "TRIGGER":"Triggering Condition",
-        "TARGETS":"Target",
+        "SETTING": "Options",
+        "TRIGGER": "Triggering Condition",
+        "TARGETS": "Target",
         "MODE": "Mode",
         "TRIGGER_MODE": "Trigger Mode",
         "SOURCE_PROJECT": "Source project",
         "REPLICATE": "Replicate",
-        "DELETE_REMOTE_IMAGES":"Delete remote images when locally deleted",
-        "REPLICATE_IMMEDIATE":"Replicate existing images immediately",
+        "DELETE_REMOTE_IMAGES": "Delete remote images when locally deleted",
+        "REPLICATE_IMMEDIATE": "Replicate existing images immediately",
         "NEW": "New",
         "NAME_TOOLTIP": "replication rule name should be at least 2 characters long with lower case characters, numbers and ._- and must be start with characters or numbers.",
         "DELETED_LABEL_INFO": "Deleted label(s) '{{param}}' referenced in the filter, click 'SAVE' to update the filter to enable this rule.",
@@ -447,6 +447,7 @@
         "TAG": "Tag",
         "SIZE": "Size",
         "VULNERABILITY": "Vulnerability",
+        "BUILD_HISTORY": "Build History",
         "SIGNED": "Signed",
         "AUTHOR": "Author",
         "CREATED": "Creation Time",
@@ -753,7 +754,9 @@
         "COPY_ERROR": "Copy failed, please try to manually copy.",
         "FILTER_FOR_TAGS": "Filter Tags",
         "AUTHOR": "Author",
-        "LABELS": "Labels"
+        "LABELS": "Labels",
+        "CREATION": "Create on",
+        "COMMAND": "Commands"
     },
     "LABEL": {
         "LABEL": "Label",
@@ -818,33 +821,32 @@
     "SERVER_ERROR": "We are unable to perform your action because internal server errors have occurred.",
     "INCONRRECT_OLD_PWD": "The old password is incorrect.",
     "UNKNOWN": "n/a",
-    "STATUS":"Status",
+    "STATUS": "Status",
     "START_TIME": "Start Time",
-    "UPDATE_TIME": "Update Time",
-    "LOGS":"Logs",
-    "PENDING":"Pending",
-    "FINISHED":"Finished",
-    "STOPPED":"Stopped",
-    "RUNNING":"Running",
-    "ERROR":"Error",
+    "END_TIME": "End Time",
+    "DETAILS": "Details",
+    "PENDING": "Pending",
+    "FINISHED": "Finished",
+    "STOPPED": "Stopped",
+    "RUNNING": "Running",
+    "ERROR": "Error",
     "SCHEDULE": {
         "NONE": "None",
         "DAILY": "Daily",
         "WEEKLY": "Weekly",
-        "MANUAL": "Manual",
-        "ON": "on",
-        "AT": "at"
-    }, 
+        "MANUAL": "Manual"
+    },
     "GC": {
         "CURRENT_SCHEDULE": "Current Schedule",
         "GC_NOW": "GC NOW",
-        "JOB_HISTORY":"GC Jobs History",
-        "JOB_ID":"Job ID",
+        "JOB_LIST": "GC Jobs List",
+        "JOB_ID": "Job ID",
         "TRIGGER_TYPE": "Trigger Type",
         "LATEST_JOBS": "Latest {{param}} Jobs",
-        "MSG_SUCCESS":"Garbage Collection Successful",
-        "MSG_SCHEDULE_SET":"Garbage Collection schedule has been set",
-        "MSG_SCHEDULE_RESET":"Garbage Collection schedule has been reset"
+        "LOG_DETAIL": "Log Details",
+        "MSG_SUCCESS": "Garbage Collection Successful",
+        "MSG_SCHEDULE_SET": "Garbage Collection schedule has been set",
+        "MSG_SCHEDULE_RESET": "Garbage Collection schedule has been reset"
     }
-    
+
 }
