--- a/src/portal/src/i18n/lang/fr-fr-lang.json
+++ b/src/portal/src/i18n/lang/fr-fr-lang.json
@@ -359,15 +359,15 @@
         "IMMEDIATE": "Immediate",
         "DAILY": "Daily",
         "WEEKLY": "Weekly",
-        "SETTING":"Options",
-        "TRIGGER":"Triggering Condition",
-        "TARGETS":"Target",
+        "SETTING": "Options",
+        "TRIGGER": "Triggering Condition",
+        "TARGETS": "Target",
         "MODE": "Mode",
         "TRIGGER_MODE": "Trigger Mode",
         "SOURCE_PROJECT": "Source project",
         "REPLICATE": "Replicate",
-        "DELETE_REMOTE_IMAGES":"Delete remote images when locally deleted",
-        "REPLICATE_IMMEDIATE":"Replicate existing images immediately",
+        "DELETE_REMOTE_IMAGES": "Delete remote images when locally deleted",
+        "REPLICATE_IMMEDIATE": "Replicate existing images immediately",
         "NEW": "New",
         "NAME_TOOLTIP": "replication rule name should be at least 2 characters long with lower case characters, numbers and ._- and must be start with characters or numbers.",
         "DELETED_LABEL_INFO": "Deleted label(s) '{{param}}' referenced in the filter, click 'SAVE' to update the filter to enable this rule.",
@@ -426,6 +426,7 @@
         "TAG": "Tag",
         "SIZE": "Taille",
         "VULNERABILITY": "Vulnérabilitée",
+        "BUILD_HISTORY": "Construire l'histoire",
         "SIGNED": "Signé",
         "AUTHOR": "Auteur",
         "CREATED": "Heure de Création",
@@ -716,7 +717,9 @@
         "COPY_ERROR": "Copie échouée, veuillez essayer de copier manuellement.",
         "FILTER_FOR_TAGS": "Filter Tags",
         "AUTHOR": "Author",
-        "LABELS": "Labels"
+        "LABELS": "Labels",
+        "CREATION": "Créer sur",
+        "COMMAND": "Les commandes"
     },
     "LABEL": {
         "LABEL": "Label",
@@ -779,32 +782,31 @@
     "SERVER_ERROR": "Nous ne sommes pas en mesure d'exécuter votre action parce que des erreurs internes de serveur se sont produites.",
     "INCONRRECT_OLD_PWD": "L'ancien mot de passe est incorrect.",
     "UNKNOWN": "n. d.",
-    "STATUS":"Status",
+    "STATUS": "Status",
     "START_TIME": "Start Time",
-    "UPDATE_TIME": "Update Time",
-    "LOGS":"Logs",
-    "PENDING":"Pending",
-    "FINISHED":"Finished",
-    "STOPPED":"Stopped",
-    "RUNNING":"Running",
-    "ERROR":"Error",
+    "END_TIME": "End Time",
+    "DETAILS": "Details",
+    "PENDING": "Pending",
+    "FINISHED": "Finished",
+    "STOPPED": "Stopped",
+    "RUNNING": "Running",
+    "ERROR": "Error",
     "SCHEDULE": {
         "NONE": "None",
         "DAILY": "Daily",
         "WEEKLY": "Weekly",
-        "MANUAL": "Manual",
-        "ON": "on",
-        "AT": "at"
-    }, 
+        "MANUAL": "Manual"
+    },
     "GC": {
         "CURRENT_SCHEDULE": "Current Schedule",
         "GC_NOW": "GC NOW",
-        "JOB_HISTORY":"GC Jobs History",
-        "JOB_ID":"Job ID",
+        "JOB_LIST": "GC Jobs List",
+        "JOB_ID": "Job ID",
         "TRIGGER_TYPE": "Trigger Type",
         "LATEST_JOBS": "Latest {{param}} Jobs",
-        "MSG_SUCCESS":"Garbage Collection Successful",
-        "MSG_SCHEDULE_SET":"Garbage Collection schedule has been set",
-        "MSG_SCHEDULE_RESET":"Garbage Collection schedule has been reset"
+        "LOG_DETAIL": "Log Details",
+        "MSG_SUCCESS": "Garbage Collection Successful",
+        "MSG_SCHEDULE_SET": "Garbage Collection schedule has been set",
+        "MSG_SCHEDULE_RESET": "Garbage Collection schedule has been reset"
     }
 }
