Allow developers and project admins administrators to download the harbor certs from UI.
Signed-off-by: FangyuanCheng <fangyuanc@vmware.com>

--- a/src/portal/src/i18n/lang/en-us-lang.json
+++ b/src/portal/src/i18n/lang/en-us-lang.json
@@ -583,6 +583,7 @@
         "PRO_CREATION_ADMIN": "Admin Only",
         "ROOT_CERT": "Registry Root Certificate",
         "ROOT_CERT_LINK": "Download",
+        "REGISTRY_CERTIFICATE": "Registry certificate",
         "TOOLTIP": {
             "SELF_REGISTRATION_ENABLE": "Enable sign up.",
             "SELF_REGISTRATION_DISABLE": "Disable sign up.",
