Feature: Add helmchart version result in global search result
Include helmchart to global search resault related to ##5791

Signed-off-by: Qian Deng <dengq@vmware.com>

--- a/src/portal/src/i18n/lang/fr-fr-lang.json
+++ b/src/portal/src/i18n/lang/fr-fr-lang.json
@@ -466,6 +466,7 @@
         "SRC_REPO": "Source Repository",
         "CREATED": "Created Time",
         "MAINTAINERS": "Maintainers",
+        "OTHER_MAINTAINERS": "{{ name }} and {{ number }} others",
         "PULLS": "Pull Count",
         "VERSION": "Version",
         "APP_VERSION": "Application Version",
