Enhance: Add helm chart count number in the project list
Project API return the helm chart count now, so put it to UI.

Signed-off-by: Qian Deng <dengq@vmware.com>

--- a/src/portal/src/i18n/lang/en-us-lang.json
+++ b/src/portal/src/i18n/lang/en-us-lang.json
@@ -153,6 +153,7 @@
         "ROLE": "Role",
         "PUBLIC_OR_PRIVATE": "Access Level",
         "REPO_COUNT": "Repositories Count",
+        "CHART_COUNT": "Chart Count",
         "CREATION_TIME": "Creation Time",
         "ACCESS_LEVEL": "Access Level",
         "PUBLIC": "Public",
