--- a/src/portal/src/i18n/lang/es-es-lang.json
+++ b/src/portal/src/i18n/lang/es-es-lang.json
@@ -154,6 +154,7 @@
         "PUBLIC_OR_PRIVATE": "Público",
         "ACCESS_LEVEL": "Nivel de acceso",
         "REPO_COUNT": "Contador de repositorios",
+        "CHART_COUNT": "Chart Count",
         "CREATION_TIME": "Fecha de creación",
         "PUBLIC": "Público",
         "PRIVATE": "Privado",
