Fix: change label style in helm chart summary page
1. Add label style
2. Fix style

Signed-off-by: Qian Deng <dengq@vmware.com>

--- a/src/portal/src/i18n/lang/es-es-lang.json
+++ b/src/portal/src/i18n/lang/es-es-lang.json
@@ -534,7 +534,7 @@
         "PROV_FILE": "Prov File",
         "READY": "Ready",
         "NOT_READY": "Not Ready",
-        "LABELS": "labels",
+        "LABELS": "Labels",
         "ADD_LABEL_TO_CHART_VERSION": "Add labels to this chart version",
         "STATUS": "Status"
     },
