project quota/keycloak
Signed-off-by: daniel zhang <danielzhanghl@gmail.com>

--- a/src/portal/src/i18n/lang/en-us-lang.json
+++ b/src/portal/src/i18n/lang/en-us-lang.json
@@ -156,6 +156,8 @@
         "REPO_COUNT": "Repositories Count",
         "CHART_COUNT": "Chart Count",
         "CREATION_TIME": "Creation Time",
+        "QUOTA": "Quota",
+        "USAGE": "Usage",
         "ACCESS_LEVEL": "Access Level",
         "PUBLIC": "Public",
         "PRIVATE": "Private",
